<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (c) 2014 - 2025 Upwards Northwards Software Limited
 All rights reserved.

 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
 1. Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
 2. Redistributions in binary form must reproduce the above copyright
 notice, this list of conditions and the following disclaimer in the
 documentation and/or other materials provided with the distribution.
 3. All advertising materials mentioning features or use of this software
 must display the following acknowledgement:
 This product includes software developed by Upwards Northwards Software Limited.
 4. Neither the name of Upwards Northwards Software Limited nor the
 names of its contributors may be used to endorse or promote products
 derived from this software without specific prior written permission.

 THIS SOFTWARE IS PROVIDED BY UPWARDS NORTHWARDS SOFTWARE LIMITED ''AS IS'' AND ANY
 EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 DISCLAIMED. IN NO EVENT SHALL THE UPWARDS NORTHWARDS SOFTWARE LIMITED BE LIABLE FOR ANY
 DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<resources>

    <string name="app_name">Blue Plaques London</string>
    <string name="action_about">About</string>
    <string name="title_map">Map</string>
    <string name="title_about">About</string>
    <string name="multiple_placemarks">Multiple Placemarks at this location</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search for a Blue Plaque</string>
    <string name="developed_details">Developer Details</string>
    <string name="developed_by">Developed by &lt;a href="http://www.twitter.com/seanoshea"&gt;Sean O\'Shea&lt;/a&gt;</string>
    <string name="designer_details">Designer Details</string>
    <string name="designed_by">Application designed by &lt;a href="http://www.andydale.info"&gt;Andy Dale&lt;/a&gt;</string>
    <string name="map_details">Map Data Details</string>
    <string name="map_data">Map Data for this application is maintained by &lt;a href="http://www.reeddesign.co.uk"&gt;Roy Reed&lt;/a&gt;</string>
    <string name="street_view">Street View</string>
    <string name="wikipedia_article">Wikipedia Article</string>
    <string name="multiple_placemarks_select_one">Select one</string>
    <string name="cancel">Cancel</string>
    <string name="wikipedia_url">https://en.wikipedia.org/wiki/%1$s</string>
    <string name="app_required">Google Maps Required</string>
    <string name="install_google_maps">You need to install Google Maps to view Street View</string>
    <string name="ok">OK</string>
    <string name="closest">Find the Plaque closest to me</string>
    <string name="action_settings">Settings</string>
    <string name="analytics">Analytics</string>
    <string name="analytics_title">Allow analytics to be collected</string>
    <string name="analytics_note">Blue Plaques London does not collect any personal information.</string>
    <string name="internet_connectivity_message">Please check your internet connection.</string>

</resources>
