<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="#FFFFFF"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/activity_map_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/activity_map_details_occupation"
            style="@style/PrimaryText" />

        <TextView
            android:id="@+id/activity_map_details_address"
            style="@style/SecondaryText" />

        <TextView
            android:id="@+id/activity_map_details_council_and_year"
            style="@style/SecondaryText" />

        <TextView
            android:id="@+id/activity_map_details_note"
            style="@style/SecondaryText" />

        <Button
            android:id="@+id/activity_map_details_street_view"
            style="@style/OrangeButton"
            android:text="@string/street_view" />

        <Button
            android:id="@+id/activity_map_details_wikipedia_article"
            style="@style/OrangeButton"
            android:text="@string/wikipedia_article" />

        <Button
            android:id="@+id/activity_map_details_directions"
            style="@style/OrangeButton"
            android:text="@string/directions" />

        <Button
            android:id="@+id/activity_map_details_more"
            style="@style/OrangeButton"
            android:text="@string/multiple_placemarks"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>